# decaml

./: .gitignore  Makefile  NOTES.md  README.md  decaml.opam  dune-project  test.agda
.github/workflows/: build.yml
src/: .gitignore  Makefile  common.ml  decaml.ml  dune  evaluation.ml  extlib.ml  lang.ml  lexer.ml  lexer.mll  lexingUtils.ml  module.ml  parser.mly  preterm.ml  term.ml  test.dml  value.ml
